navbar z-index problem fixed

--- a/src/sass/others/_navbar.scss
+++ b/src/sass/others/_navbar.scss
@@ -10,7 +10,7 @@
     // border: 1px solid $white;
     margin-bottom: -113px;
     position: relative;
-    z-index: 2;
+    z-index: 9999;
 
     @include md{
         width: 100%;
